Fixes #10 collapse on route change

--- a/src/components/TopBar/TopBar.scss
+++ b/src/components/TopBar/TopBar.scss
@@ -9,6 +9,7 @@
   -ms-transition: 0.5s;
   -o-transition: 0.5s;
   &__logo {
+    width: 20vw;
     height: 4rem;
   }
   &__item,
